# v2g-eda

./: .gitignore  Demand Response Data Preparation.ipynb  EDA.ipynb  README.md  USEP-Data_Jan2025-June2025.csv.enc  Weather.ipynb  demand_response_forecasting.py  probabilistic_dr_forecasting.py  probabilistic_dr_forecasting_enhanced.py  pyproject.toml  script.py  weather_changi_2024.csv.enc  weather_changi_2025_Jan-Jun.csv.enc  weather_region_2025_Jan-Jun.csv.enc
Outputs/: USEP-Data_Jan2025-June2025.csv
Outputs/weather_data/: weather_changi.csv  weather_changi_2024.csv  weather_region.csv
weather_data/: weather_changi.csv  weather_region.csv
