[project]
name = "v2g-eda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    "ace-tools>=0.0",
    "geopy>=2.4.1",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "shapely>=2.1.1",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.1",
    "xlrd>=2.0.2",
]

[tool.uv.workspace]
members = [
    "python3.10",
]
